@@ -68,7 +68,14 @@
 			<version>4.0.16-alpha</version>
 			<scope>test</scope>
         </dependency>
-
+        
+        <!--Monocle-->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>17.0.10</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Hamcrest -->
         <dependency>
@@ -113,11 +120,31 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        @{jaCoCoArgLine}
+                        --add-opens ui/ui=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        <!-- This line removes warnings about not opening javafx.applications, but increases runtime -->
+                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                    </argLine>
                     <skipTests>${skipTests}</skipTests> <!-- Skip all tests if 'skipTests' is true -->
                     <excludes>
                         <!-- Exclude UI tests if 'uiTestExcludePattern' is set -->
                         <exclude>${uiTestExcludePattern}</exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <propertyName>jaCoCoArgLine</propertyName>
                 </configuration>
             </plugin>
 
